force-app/main/default/objects/VsaVerbindlichkeit__c/VsaVerbindlichkeit__c.object-meta.xml
<CustomObject>
    <label>VSA Verbindlichkeit</label>
    <nameField>
        <label>Bezeichnung</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VSA Verbindlichtkeiten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>