force-app/main/default/objects/VsaVerbindlichkeit__c/fields/AktuelleRestschuld__c.field-meta.xml
<CustomField>
    <fullName>AktuelleRestschuld__c</fullName>
    <label>Aktuelle Restschuld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>