force-app/main/default/objects/VsaVerbindlichkeit__c/fields/Art__c.field-meta.xml
<CustomField>
    <fullName>Art__c</fullName>
    <label>Art</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ratendarlehen</fullName>
            </value>
            <value>
                <fullName>Leasingdarlehen</fullName>
            </value>
            <value>
                <fullName>Sonstige Schulden</fullName>
            </value>
            <value>
                <fullName>Bürgschaften</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>