force-app/main/default/objects/VsaVerbindlichkeit__c/fields/Kreditgeber__c.field-meta.xml
<CustomField>
    <fullName>Kreditgeber__c</fullName>
    <label>Kreditgeber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>