force-app/main/default/objects/VsaVerbindlichkeit__c/fields/MonatlicheRate__c.field-meta.xml
<CustomField>
    <fullName>MonatlicheRate__c</fullName>
    <label>Monatliche Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>