force-app/main/default/objects/VsaVerbindlichkeit__c/fields/TilgungBis__c.field-meta.xml
<CustomField>
    <fullName>TilgungBis__c</fullName>
    <label>Tilgung bis</label>
    <type>Date</type>
</CustomField>