force-app/main/default/objects/VsaVerbindlichkeit__c/fields/UrspruenglicherDarlehensbetrag__c.field-meta.xml
<CustomField>
    <fullName>UrspruenglicherDarlehensbetrag__c</fullName>
    <label>Ursprünglicher Darlehensbetrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>